--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/barlow": "^5.2.5",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
