--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.6",
+    "ag-charts-community": "^11.3.1",
+    "ag-charts-react": "^11.3.1",
     "axios": "^1.7.9",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
-    "framer-motion": "^12.9.1",
+    "framer-motion": "^12.16.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
